Update field partner_fee
